# phrase-filler

./: .gitignore  README.md  main.py  pyproject.toml
phrase_dict_lmdb/: data.mdb  lock.mdb
src/phrase_replacer/: __init__.py  config.py  core.py  utils.py
