[project]
name = "phrase-filler"
version = "0.1.0"
description = "Disk-backed longest-phrase-first replacement using LMDB"
requires-python = ">=3.12,<3.13"
dependencies = [
    "lmdb"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false